tests/valid/lifetime/hrt_pass_poly_identity.facet
fn id<'a>(r: unrestricted &'a unrestricted isize) -> unrestricted &'a unrestricted isize {
    r
}

fn apply<'x>(
    f: unrestricted for<'a> fn(unrestricted &'a unrestricted isize) -> unrestricted &'a unrestricted isize,
    r: unrestricted &'x unrestricted isize
) -> unrestricted &'x unrestricted isize {
    (f r)
}

fn caller<'x>(r: unrestricted &'x unrestricted isize) -> unrestricted &'x unrestricted isize {
    (apply id r)
}
