tests/invalid/lifetime/hrt_unknown_lifetime.facet
fn bad(f: unrestricted for<'a> fn(unrestricted &'missing unrestricted isize) -> unrestricted &'a unrestricted isize) -> unrestricted () {
    ()
}
